--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     {% include header.html %}
 
     <!-- content start -->
-
+<h2>O mnie</h2>
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
