--- a/css/main.sass
+++ b/css/main.sass
@@ -394,9 +394,13 @@ body
     a
       color: #333
       text-decoration: underline
-    img
-      max-width: 100%
-      margin: 0 auto
+   img 
+  margin-top: 20px;
+  width: 100%;
+  max-width: 500px;
+  height: auto;
+
+
     figure
       margin: 0
       padding: 0 0 30px
